Added gitignore and delete .exe files

--- a/TaskCode/Larco.ini
+++ b/TaskCode/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=W2HZ4JZH01
+Server=192.168.1.1\compac
 DB=Larco
 User=sa
-Password=eds$a
+Password=larco$a
 [Tasks]
 First=Ventas
 Refresh=60000
