Arregle bug en calidad
Arregle un problema con calidad, estaba muy lenta la pantalla de calidad
tambien agrege el detectado por y empleado que detecta y arregle un
problema con el empleaso que detecta.

--- a/Calidad/Larco.ini
+++ b/Calidad/Larco.ini
@@ -14,11 +14,13 @@ ScrapPassword=1
 
 
 
-Server=W2HZ4JZH02
+Server=BELTRANC2\SQLSERVER2008
 DB=Larco
 User=sa
-Password=eds$a
+Password=cat.pin.hop-250
 
-Server=.\SQLEXPRESS
-Password=eds$a
+Server=192.168.1.1\compac
+DB=Larco
+User=sa
+Password=larco$a
 
