--- a/MultipleTaskCode/Larco.ini
+++ b/MultipleTaskCode/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=W2HZ4JZH02
+Server=BELTRANC2\SQLSERVER2008
 DB=Larco
 User=sa
-Password=eds$a
+Password=cat.pin.hop-250
 [Tasks]
 First=Ventas
 Refresh=60000
