--- a/Calidad/Larco.ini
+++ b/Calidad/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=BELTRANC2\SQLSERVER2008
+Server=LP130111W7E\SQLSERVER2008
 DB=Larco
 User=sa
-Password=cat.pin.hop-250
+Password=cat.pin.hop-251
 [Tasks]
 First=Ventas
 Refresh=60000
