update link to point to ventasfinal

--- a/TaskCode/Larco.ini
+++ b/TaskCode/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=Larcoventas\COMPAC
+Server=LP150071W7E64\SQLSERVER2008R2
 DB=Larco
 User=sa
-Password=larco$a
+Password=cat.pin.hop-251
 [Tasks]
 First=Ventas
 Refresh=60000
