Add VentasFinal Project to print labels when completed.

--- a/VentasFinal/Larco.ini
+++ b/VentasFinal/Larco.ini
@@ -10,9 +10,9 @@ Move=1
 Confirm=1
 Terminados=1
 DeleteEmp=60000
-PrinterName=\\stprn1\HP6040MFP
+PrinterName=Leitz
 
-Server=W2HZ4JZH02
+Server=192.168.1.1\compac
 DB=Larco
 User=sa
-Password=eds$a
+Password=larco$a
