Update VentasFinal to display messages in caption and call new sp created just for ventas final

--- a/VentasFinal/Larco.ini
+++ b/VentasFinal/Larco.ini
@@ -12,6 +12,12 @@ Terminados=1
 DeleteEmp=60000
 PrinterName=Leitz
 
+Server=LP150071W7E64\SQLSERVER2008R2
+DB=Larco
+User=sa
+Password=cat.pin.hop-251
+
+
 Server=192.168.1.1\compac
 DB=Larco
 User=sa
