--- a/MultipleTaskCode/Larco.ini
+++ b/MultipleTaskCode/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=BELTRANC2\SQLSERVER2008
+Server=LP150071W7E64\SQLSERVER2008R2
 DB=Larco
 User=sa
-Password=cat.pin.hop-250
+Password=cat.pin.hop-251
 [Tasks]
 First=Ventas
 Refresh=60000
