only active employees

--- a/Updater/Larco.ini
+++ b/Updater/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=w2hz4jzh01
-DB=Larco
+Server=LP150071W7E64\SQLSERVER2008R2
+DB=LarcoPrev
 User=sa
-Password=eds$a
+Password=cat.pin.hop-251
 
 Server=.\SQLEXPRESS
 Password=eds$a
