removed unused temporary files update ini files and gitignore

--- a/Calidad/Larco.ini
+++ b/Calidad/Larco.ini
@@ -1,6 +1,6 @@
 [Conn]
-Server=LP150071W7E64\SQLSERVER2008R2
-DB=LarcoPrev
+Server=DELL-CBELTRAN\SQLSERVER2008R2
+DB=Larco
 User=sa
 Password=cat.pin.hop-251
 [Tasks]
