update ini removed unnecesary .exe files

--- a/RegistroProd/Larco.ini
+++ b/RegistroProd/Larco.ini
@@ -1,8 +1,8 @@
 [Conn]
-Server=W2HZ4JZH01
+Server=DELL-CBELTRAN\SQLSERVER2008R2
 DB=Larco
 User=sa
-Password=eds$a
+Password=cat.pin.hop-251
 [Tasks]
 Refresh=60000
 
